# faiss-rust

./: Cargo.toml  LICENSE  README.md  build.rs
include/: IndexBinaryFlat.h  IndexBinaryHash.h
src/: IndexBinaryFlat.cpp  IndexBinaryHash.cpp  lib.rs  main.rs
